[gd_scene load_steps=10 format=2]

[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/textures/BlueBackground.png" type="Texture" id=2]
[ext_resource path="res://musiq_game/ui/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://musiq_game/ui/MusiQTheme.tres" type="Theme" id=4]
[ext_resource path="res://musiq_game/game_stages/PlaylistItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://musiq_game/game_stages/MusiQGameSetupStage.gd" type="Script" id=6]
[ext_resource path="res://core/ui/icons/search_icon_small.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[node name="MusiQGameSetupStage" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Background" parent="." index="0"]
texture = ExtResource( 2 )

[node name="SetupOptionsContainer" type="VBoxContainer" parent="." index="3"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
theme = ExtResource( 4 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SetupOptionsContainer" index="0"]
margin_right = 1820.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "Setup"
align = 1
valign = 1

[node name="PlaylistsSearch" type="VBoxContainer" parent="SetupOptionsContainer" index="1"]
margin_top = 146.0
margin_right = 1820.0
margin_bottom = 589.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="SetupOptionsContainer/PlaylistsSearch" index="0"]
margin_right = 1820.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
right_icon = ExtResource( 8 )
placeholder_text = "Search for playlists and albums..."
caret_blink = true

[node name="SearchResultsScrollContainer" type="ScrollContainer" parent="SetupOptionsContainer/PlaylistsSearch" index="1"]
margin_top = 76.0
margin_right = 1820.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SearchResults" type="VBoxContainer" parent="SetupOptionsContainer/PlaylistsSearch/SearchResultsScrollContainer" index="0"]
margin_right = 1820.0
margin_bottom = 367.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ChosenPlaylistsScrollContainer" type="ScrollContainer" parent="SetupOptionsContainer" index="2"]
margin_top = 609.0
margin_right = 1820.0
margin_bottom = 893.0
scroll_vertical_enabled = false

[node name="ChosenPlaylistsContainer" type="HBoxContainer" parent="SetupOptionsContainer/ChosenPlaylistsScrollContainer" index="0"]
margin_right = 284.0
margin_bottom = 284.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="PlaylistItem" parent="SetupOptionsContainer/ChosenPlaylistsScrollContainer/ChosenPlaylistsContainer" index="0" instance=ExtResource( 5 )]

[node name="PlayButton" type="Button" parent="SetupOptionsContainer" index="3"]
margin_top = 913.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
text = "PLAY"

[connection signal="text_changed" from="SetupOptionsContainer/PlaylistsSearch/LineEdit" to="." method="_on_playlist_search_text_changed"]
[connection signal="pressed" from="SetupOptionsContainer/PlayButton" to="." method="_on_play_button_pressed"]
